--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,11 @@
 /* GLOBAL */
 @import "./common/variables.scss";
 @import "./common/global.scss";
+@import "./common/base.scss";
 @import "./common/fonts.scss";
 
 /* BLOCKS */
 @import "./blocks/header.scss";
+@import "./blocks/btn-burger.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/page.scss";
