--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,10 +1,15 @@
 .main-nav{
-  width: 280px;
+  width: 320px;
   margin: auto;
-  display: grid;
-  grid-template-columns: 120px 60px 60px 60px;
-  align-items: center;
+  display: flex;
+  justify-content: space-between;
+
 }
+
+.main-nav__group{
+  display: flex;
+}
+
 .main-nav--is-close {
   .main-nav__list {
     display: none;
@@ -37,6 +42,6 @@
   background-repeat: no-repeat;
   background-size: 16px 16px;
   background-position: center;
-   width: 60px;
+  width: 60px;
   height: 60px;
 }
