Добавляет чатично вёрстку блока slider

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -9,3 +9,5 @@
 @import "./blocks/btn-burger.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/page.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/container";
