--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,6 @@
-/* здесь используйте глобальные переменные */
+$tablet-width: 768px;
+$desktop-width: 1440px;
+
+:root {
+  --slider-background: #f3ebe1;
+}
