--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,15 +1,16 @@
 .page {
   height: 100vh;
-  font-family: "Oswald", "Arial", sans-serif;
-  font-size: 18px;
-  line-height: 27px;
   box-sizing: border-box;
 }
 
 .page__body {
   min-width: max-content;
   min-height: 100vh;
-  color: #000000;
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-weight: 400;
+  color: var(--base-black);
+  font-size: 14px;
+  line-height: 20px;
   margin: 0;
   display: flex;
   flex-direction: column;
