--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -3,4 +3,9 @@ $desktop-width: 1440px;
 
 :root {
   --slider-background: #f3ebe1;
+  --base-black: #333333;
+  --base-primary: #7859cf;
+  --base-white: #ffffff;
 }
+
+
