--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,8 +1,8 @@
-/* GLOBAL */
 @import "./common/variables.scss";
 @import "./common/global.scss";
 @import "./common/base.scss";
 @import "./common/fonts.scss";
+@import "./common/mixins.scss";
 
 /* BLOCKS */
 @import "./blocks/header.scss";
@@ -11,3 +11,6 @@
 @import "./blocks/page.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/container";
+@import "./blocks/slider-card.scss";
+@import "./blocks/slider-price.scss";
+
