--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -1,29 +1,29 @@
 @import "./variables.scss";
 
-@mixin list-reser{
+@mixin list-reser {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-@mixin text-price{
+@mixin text-price {
   font-weight: 600;
   font-size: 20px;
   line-height: 32px;
 }
 
-@mixin base-button-style{
+@mixin base-button-style {
   font-family: "Montserrat", "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: var(--base-white);
+  color: var(--base-white, #f3ebe1);
   border: none;
   border-radius: 4px;
-  background-color: var(--base-primary);
+  background-color: var (--base-primary);
 }
 
-@mixin slider-arrow{
+@mixin slider-arrow {
   border: none;
   background-color: transparent;
   width: 11px;
