Добавляет вёрстку блока advantages

--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -1,7 +1,7 @@
 .slider {
   position: relative;
   background-color: var(--slider-background, #f3ebe1);
-  padding-block: 20px;
+  padding-block: 20px 51px;
 }
 
 .slider__arrow-right {
