--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -13,3 +13,4 @@
 @import "./blocks/container";
 @import "./blocks/slider-card.scss";
 @import "./blocks/slider-price.scss";
+@import "./blocks/advantages.scss";
