--- a/source/styles/blocks/slider-card.scss
+++ b/source/styles/blocks/slider-card.scss
@@ -7,6 +7,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 48px;
+  letter-spacing: 0.02em;
   text-align: center;
   margin: 0;
   padding: 0;
