--- a/source/styles/blocks/slider-price.scss
+++ b/source/styles/blocks/slider-price.scss
@@ -6,7 +6,7 @@
 }
 
 .slider-price__list {
-  @include list-reser;
+  @include list-reset;
   display: flex;
   align-items: center;
   column-gap: 6px;
