--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -14,3 +14,7 @@
 @import "./blocks/slider-card.scss";
 @import "./blocks/slider-price.scss";
 @import "./blocks/advantages.scss";
+@import "./blocks/filter.scss";
+
+/* range */
+@import "../vendor/nouislider.min.css";
