--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -15,6 +15,7 @@
 @import "./blocks/slider-price.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/filter.scss";
+@import "./blocks/switch-country.scss";
 
 /* range */
 @import "../vendor/nouislider.min.css";
