--- a/source/styles/blocks/switch-country.scss
+++ b/source/styles/blocks/switch-country.scss
@@ -1,6 +1,12 @@
+.switch-country {
+ padding: 0;
+ display: grid;
+ gap: 10px;
+}
+
 .switch-country__label {
   position: relative;
-  display: inline-block;
+  display: block;
   width: 42px;
   height: 24px;
 }
@@ -18,7 +24,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: var(--base-gray, #bdbdbd);
   transition: 0.4s;
   border-radius: 34px;
 
@@ -37,13 +43,25 @@
 }
 
 input:checked + .toggle {
-  background-color: #2196F3;
+  background-color: var(--base-primary,  #7859cf);
 }
 
 input:focus + .toggle {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px var(--base-primary,  #7859cf);
 }
 
 input:checked + .toggle:before {
   transform: translateX(20px);
+}
+
+.switch-country__list {
+  @include list-reset;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.switch-country__item {
+  display: flex;
+  column-gap: 10px
 }
