--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -6,5 +6,6 @@ $desktop-width: 1440px;
   --base-black: #333333;
   --base-primary: #7859cf;
   --base-white: #ffffff;
+  --base-gray: #bdbdbd;
   --light-gray: #e2e2e2;
 }
