--- a/source/styles/blocks/switch-country.scss
+++ b/source/styles/blocks/switch-country.scss
@@ -1,7 +1,7 @@
 .switch-country {
- padding: 0;
- display: grid;
- gap: 10px;
+  padding: 0;
+  display: grid;
+  gap: 10px;
 }
 
 .switch-country__label {
@@ -20,37 +20,34 @@
 .toggle {
   position: absolute;
   cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   background-color: var(--base-gray, #bdbdbd);
   transition: 0.4s;
   border-radius: 34px;
 
-  &::before{
-  content: "";
-  display: block;
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  left: 1px;
-  bottom: 2px;
-  background-color: white;
-  transition: 0.4s;
-  border-radius: 50%;
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 1px;
+    bottom: 2px;
+    background-color: var(--base-white, #ffffff);
+    transition: 0.4s;
+    border-radius: 50%;
   }
 }
 
 input:checked + .toggle {
-  background-color: var(--base-primary,  #7859cf);
+  background-color: var(--base-primary, #7859cf);
 }
 
 input:focus + .toggle {
-  box-shadow: 0 0 1px var(--base-primary,  #7859cf);
+  box-shadow: 0 0 1px var(--base-primary, #7859cf);
 }
 
-input:checked + .toggle:before {
+input:checked + .toggle::before {
   transform: translateX(20px);
 }
 
@@ -63,5 +60,5 @@ input:checked + .toggle:before {
 
 .switch-country__item {
   display: flex;
-  column-gap: 10px
+  column-gap: 10px;
 }
