--- a/source/styles/blocks/filter.scss
+++ b/source/styles/blocks/filter.scss
@@ -1,30 +1,82 @@
-.filter {
-  &__range {
-    .noUi-target {
-      background-color: var(--light-gray, #e2e2e2);
-      width: 280px;
-      height: 2px;
-      border: none;
-    }
+.filter__price {
+  @include fieldset-mobile-style;
+}
 
-    .noUi-handle {
-      width: 24px;
-      height: 24px;
+.filter__range {
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(3, auto);
+}
+
+.filter__price-from {
+  grid-area: 2 / 1 / 2 / 1;
+  width: 118px;
+  padding-block-start: 6px;
+}
+
+.filter__price-to {
+  grid-area: 2 / 3 / 2 / 3;
+  width: 118px;
+  padding-block-start: 6px;
+}
+
+.filter__range .noUi-target {
+  background-color: var(--light-gray, #e2e2e2);
+  width: 280px;
+  height: 2px;
+  border: none;
+  cursor: pointer;
+  margin-block: 29px;
+  grid-area: 1 / 1 / 2 / 4;
+}
+
+.filter__range .noUi-connect {
+  background-color: var(--base-primary, #7859cf);
+  height: 4px;
+}
+
+.filter__range .noUi-handle {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 2px solid var(--base-primary, #7859cf);
+  top: -10px;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 22px;
+      height: 22px;
+      background-color: var(--base-white, #ffffff);
       border-radius: 50%;
-      background-color: transparent;
-      border: 2px solid var(--base-primary, #7859cf);
-    }
+      top: -1px;
+      left: -1px;
   }
 }
 
-.noUi-handle::after {
-  content: "";
-  display: block;
+.filter__separator {
+  grid-area: 2/2/3/2;
+  width: 8px;
+  height: 2px;
   position: absolute;
-  width: 22px;
-  height: 22px;
-  background-color: var(--base-white, #ffffff);
-  border-radius: 50%;
-  top: -1px;
-  left: -1px;
+  top: 26px;
+  left: 18px;
+  background-color: var(--base-gray, #bdbdbd);
+}
+
+.filter__price-range {
+  width: 118px;
+  border: 2px solid #7859cf;
+  border-radius: 4px;
+  text-align: center;
+  padding-block: 6px;
+  padding-inline: 10px;
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-weight: 500;
+  color: var(--base-gray, #bdbdbd);
+  font-size: 16px;
+  line-height: 24px;
 }
