--- a/source/styles/blocks/switch-country.scss
+++ b/source/styles/blocks/switch-country.scss
@@ -4,28 +4,29 @@
   gap: 10px;
 }
 
+.switch-country__input {
+  display: none;
+
+  &:checked + .switch-country__label {
+    background-color: var(--base-primary, #7859cf);
+  }
+
+  &:checked + .switch-country__label::after {
+    transform: translateX(25px);
+    left: -5px;
+  }
+}
+
 .switch-country__label {
   position: relative;
   display: block;
   width: 42px;
   height: 24px;
-}
-
-.switch-country__input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.toggle {
-  position: absolute;
-  cursor: pointer;
-  inset: 0;
   background-color: var(--base-gray, #bdbdbd);
+  border-radius: 12px;
   transition: 0.4s;
-  border-radius: 34px;
 
-  &::before {
+  &::after {
     content: "";
     display: block;
     position: absolute;
@@ -37,18 +38,6 @@
     transition: 0.4s;
     border-radius: 50%;
   }
-}
-
-input:checked + .toggle {
-  background-color: var(--base-primary, #7859cf);
-}
-
-input:focus + .toggle {
-  box-shadow: 0 0 1px var(--base-primary, #7859cf);
-}
-
-input:checked + .toggle::before {
-  transform: translateX(20px);
 }
 
 .switch-country__list {
