--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -16,6 +16,7 @@
 @import "./blocks/advantages.scss";
 @import "./blocks/filter.scss";
 @import "./blocks/switch-country.scss";
+@import "./blocks//catalog.scss";
 
 /* range */
 @import "../vendor/nouislider.min.css";
