--- a/source/styles/blocks/filter.scss
+++ b/source/styles/blocks/filter.scss
@@ -1,5 +1,6 @@
 .filter__price {
   @include fieldset-mobile-style;
+  padding-inline-end: 32px;
 }
 
 .filter__range {
@@ -44,16 +45,16 @@
   border: 2px solid var(--base-primary, #7859cf);
   top: -10px;
 
-    &::after {
-      content: "";
-      display: block;
-      position: absolute;
-      width: 22px;
-      height: 22px;
-      background-color: var(--base-white, #ffffff);
-      border-radius: 50%;
-      top: -1px;
-      left: -1px;
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    background-color: var(--base-white, #ffffff);
+    border-radius: 50%;
+    top: -1px;
+    left: -1px;
   }
 }
 
@@ -79,4 +80,31 @@
   color: var(--base-gray, #bdbdbd);
   font-size: 16px;
   line-height: 24px;
+}
+
+.filter__additive {
+  @include fieldset-mobile-style;
+  padding-block-end: 19px;
+}
+
+.filter__additive-list {
+  @include list-reset;
+  flex-direction: column;
+  row-gap: 20px;
+  display: flex;
+}
+
+.filter__additive-item{
+  display: flex;
+}
+
+.filter__additive-label {
+  font-weight: 400;
+}
+
+.filter__additive-radio {
+  margin: 0;
+  width: 24px;
+  height: 24px;
+  border-color: var(--base-primary, #7859cf);
 }
