Стилизация блока сортировки

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -16,6 +16,8 @@
 @import "./blocks/advantages.scss";
 @import "./blocks/filter.scss";
 @import "./blocks//catalog.scss";
+@import "./blocks/poduct-card.scss";
+@import "./blocks/sorting.scss";
 
 /* range */
 @import "../vendor/nouislider.min.css";
