--- a/source/styles/blocks/poduct-card.scss
+++ b/source/styles/blocks/poduct-card.scss
@@ -1,1 +1,49 @@
+.poduct-card {
+  display: grid;
+  column-gap: 49px;
+  grid-template-columns: repeat(2, auto);
+  background-color: var(--base-white, #ffffff);
+  padding-block: 55px 20px;
+  padding-inline: 19px;
 
+  picture {
+    grid-column: 1 / -1;
+    grid-row-start: 1;
+    text-align: center;
+  }
+}
+
+.poduct-card__title {
+  @include card-title-mobile;
+  grid-row-start: 2;
+  grid-column: 1 / 3;
+  padding-block: 19px 5px;
+}
+
+.poduct-card__about {
+  grid-row-start: 3;
+  grid-column: 1 / 3;
+  margin: 0;
+  padding-inline: 2px;
+  padding-block-end: 16px;
+}
+
+.poduct-card__add-to-basket {
+  @include base-button-style;
+  width: 141px;
+  height: 36px;
+  grid-row: 4;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-inline-end: 20px;
+  background-image: url("../../icons/basket.svg");
+  background-repeat: no-repeat;
+  background-size: 20px 16px;
+  background-position: 20px 9px;
+}
+
+.poduct-card__price {
+  @include text-price;
+  grid-row: 4;
+}
