--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -46,3 +46,9 @@
   font-size: 16px;
   line-height: 24px;
 }
+
+@mixin card-title-mobile{
+  font-size: 18px;
+  line-height: 32px;
+  margin: 0;
+}
