--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -18,6 +18,7 @@
 @import "./blocks//catalog.scss";
 @import "./blocks/poduct-card.scss";
 @import "./blocks/sorting.scss";
+@import "./blocks/pagination.scss";
 
 /* range */
 @import "../vendor/nouislider.min.css";
