Изменяет имя корзины в навигации

--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -37,7 +37,7 @@
 }
 
 .main-nav__basket {
-  background-image: url("../../icons/basket.svg");
+  background-image: url("../../icons/product-basket.svg");
   background-repeat: no-repeat;
   background-size: 16px 16px;
   background-position: center;
