--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -9,6 +9,7 @@
     background-color: var(--base-white, #ffffff);
     display: block;
     min-width: 40px;
+    height: 40px;
     padding-block: 8px;
     padding-inline: 8px;
     color: var(--base-primary, #7859cf);
@@ -27,15 +28,21 @@
 }
 
 .pagination__item:first-child {
-  background-image: url('../../icons/arrow-slider-left.svg');
-  background-size: 10px 10px;
-  background-repeat: no-repeat;
-  background-position: center center;
+
+  .pagination__link{
+    background-image: url('../../icons/arrow-slider-left.svg');
+    background-size: 10px 10px;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
 
 .pagination__item:last-child {
-  background-image: url('../../icons/arrow-slider-right.svg');
-  background-size: 10px 10px;
-  background-repeat: no-repeat;
-  background-position: center center;
+
+  .pagination__link {
+    background-image: url('../../icons/arrow-slider-right.svg');
+    background-size: 10px 10px;
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
 }
