--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -17,7 +17,7 @@
     text-decoration: none;
     font-size: 16px;
     line-height: 24px;
-    box-sizing: border-box;
+    border-radius: 4px;
     text-align: center;
   }
 
