--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -19,6 +19,7 @@
 @import "./blocks/poduct-card.scss";
 @import "./blocks/sorting.scss";
 @import "./blocks/pagination.scss";
+@import "./blocks/footer.scss";
 
 /* range */
 @import "../vendor/nouislider.min.css";
