--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -20,6 +20,7 @@
 @import "./blocks/sorting.scss";
 @import "./blocks/pagination.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/social.scss";
 
 /* range */
 @import "../vendor/nouislider.min.css";
