--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -9,4 +9,5 @@ $desktop-width: 1440px;
   --smoky-white: #f8f8f8;
   --base-gray: #bdbdbd;
   --light-gray: #e2e2e2;
+  --secondary-gray: #f0ebff;
 }
