--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -21,6 +21,7 @@
 @import "./blocks/pagination.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/social.scss";
+@import "./blocks/footer-nav.scss";
 
 /* range */
 @import "../vendor/nouislider.min.css";
