--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,33 +1,53 @@
 .social {
-  width: 320px;
+  width: 280px;
   margin: auto;
+  position: relative;
+  padding-block: 15px 27px;
   display: flex;
   justify-content: space-between;
-}
 
-.social__vk {
-  background-image: url("../../icons/vk-icon.svg");
-  background-repeat: no-repeat;
-  background-size: 16px 16px;
-  background-position: center;
-  width: 20px;
-  height: 20px;
-}
+  &__logo {
+    padding-inline-end: 18px;
+    padding-block-start: 2px;
+  }
 
-.social__pinterest {
-  background-image: url("../../icons/pinterest-icon.svg");
-  background-repeat: no-repeat;
-  background-size: 16px 16px;
-  background-position: center;
-  width: 20px;
-  height: 20px;
-}
+  &__vk {
+    background-image: url("../../icons/vk-icon.svg");
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: 50% 50%;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+  }
 
-.social__ok {
-  background-image: url("../../icons/ok-icon.svg");
-  background-repeat: no-repeat;
-  background-size: 16px 16px;
-  background-position: center;
-  width: 20px;
-  height: 20px;
+  &__pinterest {
+    background-image: url("../../icons/pinterest-icon.svg");
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+  }
+
+  &__ok {
+    background-image: url("../../icons/ok-icon.svg");
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    width: 100vh;
+    height: 1px;
+    background-color: var(--secondary-gray, #f0ebff);
+    box-shadow: 100vh 0 var(--secondary-gray, #f0ebff);
+    position: absolute;
+    right: 0;
+    bottom: 10px;
+  }
 }
