--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -52,3 +52,21 @@
   line-height: 32px;
   margin: 0;
 }
+
+@mixin footer-title-style{
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 700;
+  color: var(--base-primary, #7859cf);
+  margin: 0;
+}
+
+@mixin footer-link-style {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin: 0;
+}
