Выполено выпадающее меню

--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,4 +1,4 @@
-.header__logo {
-  padding-inline: 20px;
-  padding-block-start: 12px;
-}
+// .header__logo {
+//   padding-inline: 20px;
+//   padding-block-start: 12px;
+// }
