--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -6,6 +6,13 @@
   list-style: none;
 }
 
+@mixin link-reset {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin: 0;
+}
+
 @mixin text-price {
   font-weight: 600;
   font-size: 20px;
