--- a/source/styles/blocks/slider-card.scss
+++ b/source/styles/blocks/slider-card.scss
@@ -1,6 +1,7 @@
 .slider-card {
   display: grid;
   grid-template-rows: repeat(5, auto);
+  grid-template-columns: 280px;
 }
 
 .slider-card__title {
