--- a/source/styles/blocks/swiper.scss
+++ b/source/styles/blocks/swiper.scss
@@ -1,4 +1,7 @@
 .swiper {
-  width: 280px;
-  height: 300px;
+
+  @media (min-width: $tablet-width) {
+    width: 600px;
+    height: 600px;
+  }
 }
