--- a/source/styles/blocks/swiper-slide.scss
+++ b/source/styles/blocks/swiper-slide.scss
@@ -1,10 +1,10 @@
-.slider-card {
+.swiper-slide {
   display: grid;
   grid-template-rows: repeat(5, auto);
   grid-template-columns: 280px;
 }
 
-.slider-card__title {
+.swiper-slide__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 48px;
@@ -15,7 +15,7 @@
   grid-area: 3/1;
 }
 
-.slider-card__new {
+.swiper-slide__new {
   font-weight: 700;
   font-size: 12px;
   line-height: 16px;
@@ -26,7 +26,7 @@
   padding-block: 5px;
 }
 
-.slider-card__description {
+.swiper-slide__description {
   text-align: center;
   margin: 0;
   padding-block: 10px;
