--- a/source/styles/blocks/swiper-slide.scss
+++ b/source/styles/blocks/swiper-slide.scss
@@ -2,6 +2,11 @@
   display: grid;
   grid-template-rows: repeat(5, auto);
   grid-template-columns: 280px;
+
+  @media(min-width: $tablet-width) {
+    grid-template-columns: 728px;
+    text-align: center;
+  }
 }
 
 .swiper-slide__title {
