--- a/source/styles/blocks/swiper.scss
+++ b/source/styles/blocks/swiper.scss
@@ -4,8 +4,7 @@
   padding-block: 20px 51px;
 
   @media (min-width: $tablet-width) {
-    width: 600px;
-    height: 600px;
+    width: auto;
   }
 }
 
