--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -22,6 +22,7 @@
 @import "./blocks/social.scss";
 @import "./blocks/footer-nav.scss";
 @import "./blocks/swiper.scss";
+@import "./blocks/logo.scss";
 
 /* range */
 @import "../vendor/nouislider/nouislider.min.css";
