--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -113,7 +113,7 @@
 
   @media(min-width: $tablet-width) {
     position: relative;
-    padding: 32px 20px;
+    padding: 31px 20px;
   }
 }
 
@@ -137,9 +137,9 @@
   content:"";
   display: block;
   position: absolute;
-  width: 101px;
+  width: 103px;
   height: 2px;
   background-color: var(--base-primary, #7859cf);
-  bottom: 0;
+  bottom: 0px;
   left: 0;
 }
