--- a/source/styles/blocks/swiper.scss
+++ b/source/styles/blocks/swiper.scss
@@ -4,40 +4,37 @@
   padding-block: 20px 51px;
 
   @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(4, auto);
     width: auto;
   }
 }
 
-.swiper button.swiper-button-next,
-.swiper button.swiper-button-prev {
-  @include slider-arrow;
+.swiper__container {
+  @media (min-width: $tablet-width) {
+    grid-row: 2/4;
+  }
 }
 
-.swiper button.swiper-button-prev {
-  top: 21px;
-  left: 0;
-  padding: 0;
-  background-size: 16px 16px;
-}
-.swiper button.swiper-button-next {
-  top: 21px;
-  right: 0;
-  padding: 0;
-}
+.swiper-button-next,
+.swiper-button-prev {
+  @include swiper-button;
+  width: 20px;
+  height: 656px;
+  color: transparent;
+  background-size: 22px 22px;
+  background-position: center;
 
-.swiper.swiper-button-next::after{
-  font-size: 16px;
+  @media(min-width: $tablet-width){
+    width: 80px;
+  }
 }
 
-// .swiper__arrow-right {
-//   background-image: url("../../icons/arrow-slider-right.svg");
-//   right: 3px;
-//   top: 318px;
-// }
+.swiper-button-prev {
+  background-image: url("../../icons/arrow-slider-left.svg");
+}
 
-// .swiper__arrow-left {
-//   background-image: url("../../icons/arrow-slider-left.svg");
-//   background-repeat: no-repeat;
-//   top: 318px;
-//   left: 3px;
-// }
+.swiper-button-next {
+  background-image: url("../../icons/arrow-slider-right.svg");
+}
