Переместил цену с кнопкой в слайд

--- a/source/styles/blocks/swiper.scss
+++ b/source/styles/blocks/swiper.scss
@@ -21,7 +21,7 @@
 .swiper-button-prev {
   @include swiper-button;
   width: 20px;
-  height: 656px;
+  height: 100%;
   color: transparent;
   background-size: 22px 22px;
   background-position: center;
