--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -1,5 +1,5 @@
-// .header__logo {
-//   @media (min-width: $tablet-width) {
-
-//   }
-// }
+.logo__image {
+  @media(min-width: $tablet-width) {
+    padding-block-start: 5px;
+  }
+}
