--- a/source/styles/blocks/slider-price.scss
+++ b/source/styles/blocks/slider-price.scss
@@ -6,7 +6,10 @@
   height: 58px;
 
   @media(min-width:$tablet-width) {
-    grid-area: 1/1/1/1;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    padding-inline-end: 40px;
   }
 }
 
