--- a/source/styles/blocks/swiper.scss
+++ b/source/styles/blocks/swiper.scss
@@ -5,9 +5,12 @@
 
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-rows: repeat(4, auto);
-    grid-template-columns: repeat(4, auto);
     width: auto;
+    background: linear-gradient(
+    to bottom,
+    var(--slider-background, #f3ebe1) 641px,
+    #ffffff 30%
+  );
   }
 }
 
