--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -3,6 +3,7 @@
 
   @media(min-width: $tablet-width) {
     padding-block-start: 54px;
+    padding-block-end: 98px;
   }
 }
 
@@ -35,16 +36,21 @@
   @include list-reset;
   display: flex;
   flex-direction: column;
+  padding-block-start: 29px;
+  row-gap: 31px;
 
-  // @media(min-width: $tablet-width) {
-  //   padding-block-start: 28px;
-  //   display: grid;
-  //   grid-template-columns: repeat(2, 1fr);
-  //   grid-template-rows: repeat(2, 1fr);
-  //   padding-block-start: 55px;
-  //   padding-inline-start: 2px;
-  //   column-gap: 28px;
-  // }
+  @media(min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 30px;
+    row-gap: 27px;
+    padding-block-start: 55px;
+
+    // padding-block-start: 55px;
+    // padding-inline-start: 2px;
+    // column-gap: 28px;
+  }
 }
 
 .advantages-list__item {
@@ -53,36 +59,54 @@
   align-items: center;
   row-gap: 6px;
 
-  // @media(min-width: $tablet-width) {
-  //   display: grid;
-  //   grid-template-columns: repeat(3, auto);
-  //   grid-template-rows: repeat(2, auto);
-  //   row-gap: 10px;
-  //   column-gap: 20px;
-  // }
+  @media(min-width: $tablet-width) {
+    // display: grid;
+    // grid-template-columns: repeat(3, auto);
+    // grid-template-rows: repeat(2, auto);
+    // row-gap: 10px;
+    // column-gap: 20px;
+    padding-inline-start: 72px;
+    row-gap: 10px;
+  }
 }
 
 .advantages-list__item--speed {
   background: url("../../icons/speed.svg") no-repeat top center / 52px 56px;
+
+  @media(min-width: $tablet-width) {
+    background-position: top left;
+  }
 }
 
 .advantages-list__item--comfort {
   background: url("../../icons/comfort.svg") no-repeat top center / 52px 56px;
+
+  @media(min-width: $tablet-width) {
+    background-position: top left;
+  }
 }
 
 .advantages-list__item--cheerfulness {
   background: url("../../icons/cheerfulness.svg") no-repeat top center / 52px 56px;
+
+  @media(min-width: $tablet-width) {
+    background-position: top left;
+  }
 }
 
 .advantages-list__item--ecology{
   background: url("../../icons/ecology.svg") no-repeat top center / 52px 56px;
+
+  @media(min-width: $tablet-width) {
+    background-position: top left;
+  }
 }
 
 .advantages-list__item-title {
   @include advantages-title-mobile;
   margin-block: 0;
   text-align: center;
-  padding-block-start: 4px;
+  padding-block-start: 65px;
 
   @media(min-width: $tablet-width) {
     padding-block-start: 0;
@@ -97,12 +121,16 @@
 
 .advantages-list__item-text br {
   display: inline;
-
   @media(min-width: $tablet-width) {
     display: none;
   }
 }
 
+.advantages-list__item--ecology .advantages-list__item-text br {
+  @media(min-width: $tablet-width) {
+    display: inline;
+  }
+}
 .advantages-list__item-text {
   margin-block: 0;
   text-align: center;
