--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -1,6 +1,12 @@
 .catalog {
   background-color: var(--smoky-white, #f8f8f8);
-  padding-block-start: 58px;
+  padding-block-start: 57px;
+}
+
+.catalog__container {
+  @media(min-width: $tablet-width) {
+    width: 728px;
+  }
 }
 
 .catalog__title {
@@ -12,6 +18,10 @@
   color: var(--base-primary, #7859cf);
   text-align: center;
   text-transform: uppercase;
+
+  @media(min-width: $tablet-width) {
+    padding-block: 22px 0;
+  }
 }
 
 .catalog__text {
@@ -21,6 +31,12 @@
   font-size: 24px;
   line-height: 36px;
   text-align: center;
+
+  @media(min-width: $tablet-width) {
+    font-size: 42px;
+    line-height: 76px;
+    padding-block-end: 15px;
+  }
 }
 
 .catalog__list {
