--- a/source/styles/blocks/swiper.scss
+++ b/source/styles/blocks/swiper.scss
@@ -33,8 +33,10 @@
 
 .swiper-button-prev {
   background-image: url("../../icons/arrow-slider-left.svg");
+  background-position-y: 310px;
 }
 
 .swiper-button-next {
   background-image: url("../../icons/arrow-slider-right.svg");
+  background-position-y: 310px;
 }
