--- a/source/styles/blocks/sorting.scss
+++ b/source/styles/blocks/sorting.scss
@@ -4,6 +4,11 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
+
+  @media(min-width: $tablet-width) {
+    justify-content: end;
+    gap: 10px;
+  }
 }
 
 .sorting__label {
