--- a/source/styles/blocks/poduct-card.scss
+++ b/source/styles/blocks/poduct-card.scss
@@ -11,6 +11,12 @@
     grid-row-start: 1;
     text-align: center;
   }
+
+  @media(min-width: $tablet-width) {
+    padding-block: 50px 30px;
+    padding-inline: 30px;
+    column-gap: 98px;
+  }
 }
 
 .poduct-card__title {
@@ -18,6 +24,11 @@
   grid-row-start: 2;
   grid-column: 1 / 3;
   padding-block: 19px 5px;
+
+  @media(min-width: $tablet-width) {
+    @include card-title-tablet;
+    padding-block: 25px 10px;
+  }
 }
 
 .poduct-card__about {
@@ -26,6 +37,19 @@
   margin: 0;
   padding-inline: 2px;
   padding-block-end: 16px;
+
+  @media(min-width: $tablet-width) {
+    padding-inline-end: 0;
+    padding-block-end: 20px;
+  }
+}
+
+.poduct-card__about br {
+  display: none;
+
+  @media(min-width: $tablet-width) {
+    display: inline;
+  }
 }
 
 .poduct-card__add-to-basket {
