--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -59,6 +59,11 @@
   margin: 0;
 }
 
+@mixin card-title-tablet {
+  font-size: 24px;
+  line-height: 36px;
+}
+
 @mixin footer-title-style {
   font-size: 14px;
   line-height: 20px;
