--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -4,28 +4,35 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  padding-block: 41px 43px;
+  padding-block: 43px;
 
-  &__link {
-    background-color: var(--base-white, #ffffff);
-    display: block;
-    min-width: 40px;
-    height: 40px;
-    padding-block: 8px;
-    padding-inline: 8px;
-    color: var(--base-primary, #7859cf);
-    text-decoration: none;
-    font-size: 16px;
-    line-height: 24px;
-    border-radius: 4px;
-    text-align: center;
+  @media(min-width: $tablet-width) {
+    justify-content: end;
+    margin-inline-end: 3px;
+    padding-block-end: 89px;
+    gap: 21px;
   }
+}
 
-  &__link--current {
-    background-color: transparent;
-    color: var(--base-black, #333333);
-    font-weight: 600;
-  }
+.pagination__link {
+  background-color: var(--base-white, #ffffff);
+  display: block;
+  min-width: 40px;
+  height: 40px;
+  padding-block: 8px;
+  padding-inline: 8px;
+  color: var(--base-primary, #7859cf);
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 24px;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.pagination__link--current {
+  background-color: transparent;
+  color: var(--base-black, #333333);
+  font-weight: 600;
 }
 
 .pagination__item:first-child {
@@ -34,6 +41,11 @@
     background-size: 10px 10px;
     background-repeat: no-repeat;
     background-position: center center;
+
+    @media(min-width: $tablet-width) {
+      background-image:none;
+      padding-inline: 18px;
+    }
   }
 }
 
@@ -43,5 +55,10 @@
     background-size: 10px 10px;
     background-repeat: no-repeat;
     background-position: center center;
+
+    @media(min-width: $tablet-width) {
+      background-image:none;
+      padding-inline: 18px;
+    }
   }
 }
