--- a/source/styles/blocks/footer-nav.scss
+++ b/source/styles/blocks/footer-nav.scss
@@ -1,3 +1,9 @@
+.footer-nav {
+  display: grid;
+  grid-template-rows: repeat(6, auto);
+  grid-template-columns: repeat(5, auto);
+}
+
 .footer-nav__list {
   @include list-reset;
   display: flex;
@@ -17,6 +23,13 @@
     right: 0;
     bottom: 10px;
   }
+
+  &:nth-child(3){
+      @media(min-width: $tablet-width) {
+      grid-row: 3;
+      grid-column: 1;
+    }
+  }
 }
 
 .footer-nav__title {
@@ -30,12 +43,12 @@
   letter-spacing: 0.02em;
 }
 
-.footer {
-  &__contacts {
+
+.footer__contacts {
     padding-block-end: 20px;
   }
 
-  &__contacts-address {
+.footer__contacts-address {
     position: relative;
     font-size: 14px;
     line-height: 20px;
@@ -59,7 +72,7 @@
     }
   }
 
-  &__contacts-phone {
+.footer__contacts-phone {
     position: relative;
     font-size: 14px;
     line-height: 20px;
@@ -82,26 +95,25 @@
     }
   }
 
-  &__developer {
-    position: relative;
-    text-align: center;
-    margin: 0;
-    font-size: 12px;
-    line-height: 16px;
-    padding-block: 20px 30px;
-    padding-inline-end: 15px;
-    color: var(--base-gray, #bdbdbd);
+.footer__developer {
+  position: relative;
+  text-align: center;
+  margin: 0;
+  font-size: 12px;
+  line-height: 16px;
+  padding-block: 20px 30px;
+  padding-inline-end: 15px;
+  color: var(--base-gray, #bdbdbd);
 
-    &::after {
-      content: "";
-      display: block;
-      width: 12px;
-      height: 16px;
-      background-image: url("../../icons/logo-dev-icon.svg");
-      background-repeat: no-repeat;
-      position: absolute;
-      right: 37px;
-      bottom: 30px;
-    }
+  &::after {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 16px;
+    background-image: url("../../icons/logo-dev-icon.svg");
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 37px;
+    bottom: 30px;
   }
 }
