--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -6,39 +6,6 @@
   display: flex;
   justify-content: space-between;
 
-  &__logo {
-    padding-inline-end: 18px;
-    padding-block-start: 2px;
-  }
-
-  &__vk {
-    background-image: url("../../icons/vk-icon.svg");
-    background-repeat: no-repeat;
-    background-size: 20px;
-    background-position: 50% 50%;
-    width: 40px;
-    height: 40px;
-    padding: 10px;
-  }
-
-  &__pinterest {
-    background-image: url("../../icons/pinterest-icon.svg");
-    background-repeat: no-repeat;
-    background-size: 20px;
-    background-position: center;
-    width: 40px;
-    height: 40px;
-  }
-
-  &__ok {
-    background-image: url("../../icons/ok-icon.svg");
-    background-repeat: no-repeat;
-    background-size: 20px;
-    background-position: center;
-    width: 40px;
-    height: 40px;
-  }
-
   &::after {
     content: "";
     display: block;
@@ -49,5 +16,59 @@
     position: absolute;
     right: 0;
     bottom: 10px;
+
+    @media(min-width: $tablet-width) {
+      display: none;
+    }
   }
+
+  @media(min-width: $tablet-width) {
+    width: auto;
+    padding-block: 29px 17px;
+    grid-row: 1;
+    grid-column: 1 / 6;
+  }
+}
+
+.social__logo {
+  padding-inline-end: 18px;
+  padding-block-start: 2px;
+}
+
+.social__link {
+  display: flex;
+  justify-content: space-between;
+
+  @media(min-width: $tablet-width) {
+    padding-block-start: 5px;
+    column-gap: 20px;
+  }
+}
+
+.social__vk {
+  background-image: url("../../icons/vk-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: 50% 50%;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+}
+
+.social__pinterest {
+  background-image: url("../../icons/pinterest-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 22px;
+  background-position: center;
+  width: 40px;
+  height: 40px;
+}
+
+.social__ok {
+  background-image: url("../../icons/ok-icon.svg");
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: center;
+  width: 40px;
+  height: 40px;
 }
