--- a/source/styles/blocks/footer-nav.scss
+++ b/source/styles/blocks/footer-nav.scss
@@ -1,7 +1,10 @@
 .footer-nav {
-  display: grid;
-  grid-template-rows: repeat(6, auto);
-  grid-template-columns: repeat(5, auto);
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: repeat(3, auto);
+  }
 }
 
 .footer-nav__list {
@@ -22,12 +25,9 @@
     position: absolute;
     right: 0;
     bottom: 10px;
-  }
 
-  &:nth-child(3){
-      @media(min-width: $tablet-width) {
-      grid-row: 3;
-      grid-column: 1;
+    @media (min-width: $tablet-width) {
+      display: none;
     }
   }
 }
@@ -45,8 +45,12 @@
 
 
 .footer__contacts {
-    padding-block-end: 20px;
+  padding-block-end: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-inline-start: 72px;
   }
+}
 
 .footer__contacts-address {
     position: relative;
@@ -95,25 +99,23 @@
     }
   }
 
-.footer__developer {
-  position: relative;
-  text-align: center;
-  margin: 0;
-  font-size: 12px;
-  line-height: 16px;
-  padding-block: 20px 30px;
-  padding-inline-end: 15px;
-  color: var(--base-gray, #bdbdbd);
+.footer-nav__title {
 
-  &::after {
-    content: "";
-    display: block;
-    width: 12px;
-    height: 16px;
-    background-image: url("../../icons/logo-dev-icon.svg");
-    background-repeat: no-repeat;
-    position: absolute;
-    right: 37px;
-    bottom: 30px;
+  @media (min-width: $tablet-width) {
+    grid-row: 2;
+  }
+}
+
+.footer-nav__title:first-of-type {
+
+  @media (min-width: $tablet-width) {
+    padding-inline-end: 105px;
+  }
+}
+
+.footer-nav__title:last-of-type {
+
+  @media (min-width: $tablet-width) {
+    padding-inline-start: 73px;
   }
 }
