--- a/source/styles/blocks/slider-price.scss
+++ b/source/styles/blocks/slider-price.scss
@@ -6,10 +6,8 @@
   height: 58px;
 
   @media(min-width:$tablet-width) {
-    grid-column-start: 2;
-    grid-column-end: 5;
+    grid-column: 1;
     grid-row-start: 4;
-    padding-inline-end: 59px;
   }
 }
 
