--- a/source/styles/blocks/swiper.scss
+++ b/source/styles/blocks/swiper.scss
@@ -2,6 +2,7 @@
   position: relative;
   background-color: var(--slider-background, #f3ebe1);
   padding-block: 20px 51px;
+  margin: auto;
 
   @media (min-width: $tablet-width) {
     display: grid;
